Test fix for overflow behavior

--- a/styles/Feature.scss
+++ b/styles/Feature.scss
@@ -29,6 +29,7 @@
       width: 100%;
       padding-top: 25%;
       overflow: scroll;
+      overscroll-behavior: auto;
 
    }
  }
